<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_id"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/black"
        app:title="@string/app_name">
    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Theme"
        android:textColor="@android:color/white" />

<!--    <RelativeLayout-->
<!--        android:id="@+id/notification"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:clickable="true"-->
<!--        android:gravity="center">-->

<!--        <ImageView-->
<!--            android:layout_width="25dp"-->
<!--            android:layout_height="25dp"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_gravity="end"-->
<!--            android:src="@drawable/notification" />-->
<!--</RelativeLayout>-->
</android.support.v7.widget.Toolbar>

    <TextView
        android:layout_below="@id/toolbar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:id="@+id/head"
        android:text="@string/your_help_their_future"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="22sp"/>
    <TextView
        android:layout_below="@id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/subhead"
        android:layout_margin="10dp"
        android:text="@string/aa"
        android:textSize="16sp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/slideshow"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/subhead" />

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_below="@id/slideshow"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/img"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/checked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/easy_to_use"
            android:textSize="20sp"
            android:textStyle="bold" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_below="@id/slideshow"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/shield" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Your_money_is_in_safe_hands"
            android:textSize="20sp"
            android:textStyle="bold" />


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_below="@id/card1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/img3"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/stopwatch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/instant_service"
            android:textSize="20sp"
            android:textStyle="bold" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="90pt"
        android:layout_height="wrap_content"
        android:layout_below="@id/card2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/img4"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/large_userbase"
            android:textSize="20sp"
            android:textStyle="bold" />


    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:text="@string/fund"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#FFFFFF"
        android:layout_below="@id/card3"
        android:layout_marginStart="60dp"
        android:layout_alignParentStart="true"
        android:justificationMode="inter_word"
        android:backgroundTint="#000000"
        android:background="@drawable/button_shape_capsule"
        tools:ignore="RtlSymmetry"
        android:layout_marginBottom="50dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@id/card3"
        android:text="@string/contribute"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="60dp"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#000000"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape_capsule"
        />
</RelativeLayout>
</ScrollView>