<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/app_name"
            app:titleTextColor="@color/black" />
        <TextView
            android:layout_below="@id/toolbar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="20dp"
            android:id="@+id/head"
            android:text="@string/where_to_contribute"
            android:textStyle="bold"
            android:textSize="32sp"/>
        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/head"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/medical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/medical"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/head"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/earthquake" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/calamity_relief"
                android:textSize="20sp"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/card1"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/mortarboard" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/educational_aid"
                android:textSize="20sp"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/card2"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/orphanage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/orphanage"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card5"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/card3"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img5"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/oldhouse" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/old_age_home"
                android:textSize="20sp"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card6"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/card4"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img6"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/paw" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/animal_help"
                android:textSize="20sp"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card7"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/card5"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img7"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/seeding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/nurture_the_nature"
                android:textSize="20sp"
                android:textStyle="bold" />


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card8"
            android:layout_width="90pt"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/card6"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/img8"
                android:layout_width="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ellipsis" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Others"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>
